# hektor

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/hektor/: __init__.py  api.py  hybrid.py  index.py  tokenizers.py
src/hektor/embeddings/: __init__.py  base.py  huggingface.py
